--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                                     Static demos
                                 </span>
                             </div>
-                            <h3><a href="blog/landing.html">Blog landing page</a></h3>
-                            <h3><a href="blog/post.html">Blog post</a></h3>
+                            <h3><a href="blog_static/landing.html">Blog landing page</a></h3>
+                            <h3><a href="blog_static/post.html">Blog post</a></h3>
                         </div>
                         <div class="demo-col-6 demo-spaced">
                             <div class="meta-header">
@@ -137,7 +137,7 @@
                                     Static demos
                                 </span>
                             </div>
-                            <h3><a href="newsroom/landing.html">Newsroom landing page</a></h3>
+                            <h3><a href="newsroom_static/landing.html">Newsroom landing page</a></h3>
                         </div>
                     </div>
 
