Testing date range elements.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -268,13 +268,35 @@
                                         </select>
                                     </div>
                                 </div>
-                                <!-- <div class="form-l_col form-l_col-1-3">
+                                <div class="form-l_col form-l_col-1-3">
                                     <div class="form-group">
                                         <label class="form-label-header">
                                             Date range
                                         </label>
+                                        <select>
+                                            <option value="">Month</option>
+                                            <option value="">January</option>
+                                            <option value="">February</option>
+                                            <option value="">March</option>
+                                            <option value="">April</option>
+                                            <option value="">May</option>
+                                            <option value="">June</option>
+                                            <option value="">July</option>
+                                            <option value="">August</option>
+                                            <option value="">September</option>
+                                            <option value="">October</option>
+                                            <option value="">November</option>
+                                            <option value="">December</option>
+                                        </select>
+                                        <select>
+                                            <option value="">Year</option>
+                                            <option value="">2014</option>
+                                            <option value="">2013</option>
+                                            <option value="">2012</option>
+                                            <option value="">2011</option>
+                                        </select>
                                     </div>
-                                </div> -->
+                                </div>
                             </div>
                             <div class="form-actions form-actions__right-on-med">
                                 <input type="reset" value="Reset filters" class="btn btn-warning btn-link form-actions_item">
