Testing styled select.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -273,7 +273,7 @@
                                         <label class="form-label-header">
                                             Date range
                                         </label>
-                                        <select>
+                                        <select class="form-input_month">
                                             <option value="">Month</option>
                                             <option value="">January</option>
                                             <option value="">February</option>
@@ -288,7 +288,7 @@
                                             <option value="">November</option>
                                             <option value="">December</option>
                                         </select>
-                                        <select>
+                                        <select class="form-input_year">
                                             <option value="">Year</option>
                                             <option value="">2014</option>
                                             <option value="">2013</option>
