--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -243,24 +243,15 @@
                                         <label class="form-label-header">
                                             Topics
                                         </label>
-                                        <div class="select">
-                                            <span class="select_icon cf-icon cf-icon-play"></span>
-                                            <select class="input__light">
-                                                <option value="option1">Option 1</option>
-                                                <option value="option2">Option 2</option>
-                                                <option value="option3">Option 3</option>
-                                                <option value="option4">Option 4</option>
-                                            </select>
-                                        </div>
                                         <!-- <input type="text" name="filter_tags" value=""> -->
-                                        <!-- <select name="filter_tags" multiple>
+                                        <select name="filter_tags" multiple>
                                             <option value="tag1">Tag 1</option>
                                             <option value="tag2">Tag 2</option>
                                             <option value="tag3">Tag 3</option>
                                             <option value="tag4">Tag 4</option>
                                             <option value="tag5">Tag 5</option>
                                             <option value="tag6">Tag 6</option>
-                                        </select> -->
+                                        </select>
                                     </div>
                                     <div class="form-group">
                                         <label class="form-label-header">
