Fisrt pass at adding popular stories to sidebar.

--- a/blog_static/post.html
+++ b/blog_static/post.html
@@ -498,6 +498,30 @@
             </section><!-- END .content_main -->
 
             <aside class="content_sidebar">
+                <section>
+                    <h1 class="header-slug">
+                        <span class="header-slug_inner">
+                            Popular stories
+                        </span>
+                    </h1>
+                    <ul class="list list__unstyled">
+                        <li class="list_item list_item__spaced">
+                            <a class="list_link" href="#">
+                                Story 1
+                            </a>
+                        </li>
+                        <li class="list_item list_item__spaced">
+                            <a class="list_link" href="#">
+                                Story 2
+                            </a>
+                        </li>
+                        <li class="list_item list_item__spaced">
+                            <a class="list_link" href="#">
+                                Story 3
+                            </a>
+                        </li>
+                    </ul>
+                </section>
                 <section class="popular-stories">
                     <div class="demo-placeholder">Related news placeholder</div>
                 </section>
