--- a/blog_static/post.html
+++ b/blog_static/post.html
@@ -498,7 +498,7 @@
             </section><!-- END .content_main -->
 
             <aside class="content_sidebar">
-                <section>
+                <section class="popular-stories">
                     <h1 class="header-slug">
                         <span class="header-slug_inner">
                             Popular stories
@@ -522,10 +522,10 @@
                         </li>
                     </ul>
                 </section>
-                <section class="popular-stories">
+                <section class="related-news">
                     <div class="demo-placeholder">Related news placeholder</div>
                 </section>
-                <section class="related-links">
+                <section class="related-stories">
                     <div class="demo-placeholder">Related stories placeholder</div>
                 </section>
                 <section class="stay-informed">
