Adds list_link__large to sidebar.

--- a/blog_static/post.html
+++ b/blog_static/post.html
@@ -506,17 +506,17 @@
                     </h1>
                     <ul class="list list__unstyled">
                         <li class="list_item list_item__spaced">
-                            <a class="list_link" href="#">
+                            <a class="list_link list_link__large" href="#">
                                 Story 1
                             </a>
                         </li>
                         <li class="list_item list_item__spaced">
-                            <a class="list_link" href="#">
+                            <a class="list_link list_link__large" href="#">
                                 Story 2
                             </a>
                         </li>
                         <li class="list_item list_item__spaced">
-                            <a class="list_link" href="#">
+                            <a class="list_link list_link__large" href="#">
                                 Story 3
                             </a>
                         </li>
