--- a/blog_static/post.html
+++ b/blog_static/post.html
@@ -507,17 +507,27 @@
                     <ul class="list list__unstyled">
                         <li class="list_item list_item__spaced">
                             <a class="list_link list_link__large" href="#">
-                                Story 1
+                                How to protect vulnerable children from credit reporting problems
                             </a>
                         </li>
                         <li class="list_item list_item__spaced">
                             <a class="list_link list_link__large" href="#">
-                                Story 2
+                                Preventing illegal discrimination in auto lending
                             </a>
                         </li>
                         <li class="list_item list_item__spaced">
                             <a class="list_link list_link__large" href="#">
-                                Story 3
+                                Our new mortgage visualization tool
+                            </a>
+                        </li>
+                        <li class="list_item list_item__spaced">
+                            <a class="list_link list_link__large" href="#">
+                                Consumer advisory: Co-signers can cause surprise defaults on your private student loans
+                            </a>
+                        </li>
+                        <li class="list_item list_item__spaced">
+                            <a class="list_link list_link__large" href="#">
+                                Our work on fair lending
                             </a>
                         </li>
                     </ul>
