Move popular stories to landing page.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -437,7 +437,38 @@
 
             <aside class="content_sidebar">
                 <section class="popular-stories">
-                    <div class="demo-placeholder">popular stories placeholder</div>
+                    <h1 class="header-slug">
+                        <span class="header-slug_inner">
+                            Popular stories
+                        </span>
+                    </h1>
+                    <ul class="list list__unstyled">
+                        <li class="list_item list_item__spaced">
+                            <a class="list_link list_link__large" href="#">
+                                How to protect vulnerable children from credit reporting problems
+                            </a>
+                        </li>
+                        <li class="list_item list_item__spaced">
+                            <a class="list_link list_link__large" href="#">
+                                Preventing illegal discrimination in auto lending
+                            </a>
+                        </li>
+                        <li class="list_item list_item__spaced">
+                            <a class="list_link list_link__large" href="#">
+                                Our new mortgage visualization tool
+                            </a>
+                        </li>
+                        <li class="list_item list_item__spaced">
+                            <a class="list_link list_link__large" href="#">
+                                Consumer advisory: Co-signers can cause surprise defaults on your private student loans
+                            </a>
+                        </li>
+                        <li class="list_item list_item__spaced">
+                            <a class="list_link list_link__large" href="#">
+                                Our work on fair lending
+                            </a>
+                        </li>
+                    </ul>
                 </section>
                 <section class="related-links">
                     <div class="demo-placeholder">related links placeholder</div>
