Use secondary button on pagination.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -405,11 +405,11 @@
                 </article>
 
                 <nav class="post-pagination pagination" role="navigation" aria-label="Pagination">
-                    <a class="btn pagination_prev" href="#">
+                    <a class="btn btn-secondary pagination_prev" href="#">
                         <span class="btn-icon-left cf-icon cf-icon-left"></span>
                         Newer
                     </a>
-                    <a class="btn pagination_next" href="#">
+                    <a class="btn btn-secondary pagination_next" href="#">
                         Older
                         <span class="btn-icon-right cf-icon cf-icon-right"></span>
                     </a>
