.post-preview styling updates.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -442,7 +442,7 @@
                             Popular stories
                         </span>
                     </h1>
-                    <ul class="list list__unstyled">
+                    <ul class="list list__popular-stories list__unstyled">
                         <li class="list_item list_item__spaced">
                             <a class="list_link list_link__large" href="#">
                                 How to protect vulnerable children from credit reporting problems
