--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -240,7 +240,7 @@
                                 </div>
                                 <div class="form-l_col form-l_col-1-3">
                                     <div class="form-group">
-                                        <label class="form-label-header">
+                                        <label class="form-label-header" for="filter_tags">
                                             Topics
                                         </label>
                                         <!-- <input type="text" name="filter_tags" value=""> -->
@@ -254,7 +254,7 @@
                                         </select>
                                     </div>
                                     <div class="form-group">
-                                        <label class="form-label-header">
+                                        <label class="form-label-header" for="filter_author">
                                             Author
                                         </label>
                                         <!-- <input type="text" name="filter_author" value=""> -->
@@ -273,28 +273,66 @@
                                         <label class="form-label-header">
                                             Date range
                                         </label>
-                                        <select class="form-input-month">
-                                            <option value="">Month</option>
-                                            <option value="">January</option>
-                                            <option value="">February</option>
-                                            <option value="">March</option>
-                                            <option value="">April</option>
-                                            <option value="">May</option>
-                                            <option value="">June</option>
-                                            <option value="">July</option>
-                                            <option value="">August</option>
-                                            <option value="">September</option>
-                                            <option value="">October</option>
-                                            <option value="">November</option>
-                                            <option value="">December</option>
-                                        </select>
-                                        <select class="form-input_year">
-                                            <option value="">Year</option>
-                                            <option value="">2014</option>
-                                            <option value="">2013</option>
-                                            <option value="">2012</option>
-                                            <option value="">2011</option>
-                                        </select>
+                                        <div class="form-group_item">
+                                            <label class="u-visually-hidden" for="filter_from_month">
+                                                From month
+                                            </label>
+                                            <select class="form-input-month" name="filter_from_month">
+                                                <option value="">Month</option>
+                                                <option value="">January</option>
+                                                <option value="">February</option>
+                                                <option value="">March</option>
+                                                <option value="">April</option>
+                                                <option value="">May</option>
+                                                <option value="">June</option>
+                                                <option value="">July</option>
+                                                <option value="">August</option>
+                                                <option value="">September</option>
+                                                <option value="">October</option>
+                                                <option value="">November</option>
+                                                <option value="">December</option>
+                                            </select>
+                                            <label class="u-visually-hidden" for="filter_from_year">
+                                                From year
+                                            </label>
+                                            <select class="form-input_year" name="filter_from_year">
+                                                <option value="">Year</option>
+                                                <option value="">2014</option>
+                                                <option value="">2013</option>
+                                                <option value="">2012</option>
+                                                <option value="">2011</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group_item">
+                                            <label class="u-visually-hidden" for="filter_to_month">
+                                                To month
+                                            </label>
+                                            <select class="form-input-month" name="filter_to_month">
+                                                <option value="">Month</option>
+                                                <option value="">January</option>
+                                                <option value="">February</option>
+                                                <option value="">March</option>
+                                                <option value="">April</option>
+                                                <option value="">May</option>
+                                                <option value="">June</option>
+                                                <option value="">July</option>
+                                                <option value="">August</option>
+                                                <option value="">September</option>
+                                                <option value="">October</option>
+                                                <option value="">November</option>
+                                                <option value="">December</option>
+                                            </select>
+                                            <label class="u-visually-hidden" for="filter_to_year">
+                                                To yeat
+                                            </label>
+                                            <select class="form-input_year" name="filter_to_year">
+                                                <option value="">Year</option>
+                                                <option value="">2014</option>
+                                                <option value="">2013</option>
+                                                <option value="">2012</option>
+                                                <option value="">2011</option>
+                                            </select>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
