Updates filter form labels.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -277,7 +277,10 @@
                                             <label class="u-visually-hidden" for="filter_from_month">
                                                 From month
                                             </label>
-                                            <select class="form-input-month" name="filter_from_month">
+                                            <select
+                                                class="form-input-month"
+                                                name="filter_from_month"
+                                                id="filter_from_month">
                                                 <option value="">Month</option>
                                                 <option value="">January</option>
                                                 <option value="">February</option>
@@ -295,7 +298,10 @@
                                             <label class="u-visually-hidden" for="filter_from_year">
                                                 From year
                                             </label>
-                                            <select class="form-input_year" name="filter_from_year">
+                                            <select
+                                                class="form-input_year"
+                                                name="filter_from_year"
+                                                id="filter_from_year">
                                                 <option value="">Year</option>
                                                 <option value="">2014</option>
                                                 <option value="">2013</option>
@@ -307,7 +313,10 @@
                                             <label class="u-visually-hidden" for="filter_to_month">
                                                 To month
                                             </label>
-                                            <select class="form-input-month" name="filter_to_month">
+                                            <select
+                                                class="form-input-month"
+                                                name="filter_to_month"
+                                                id="filter_to_month">
                                                 <option value="">Month</option>
                                                 <option value="">January</option>
                                                 <option value="">February</option>
@@ -325,7 +334,10 @@
                                             <label class="u-visually-hidden" for="filter_to_year">
                                                 To yeat
                                             </label>
-                                            <select class="form-input_year" name="filter_to_year">
+                                            <select
+                                                class="form-input_year"
+                                                name="filter_to_year"
+                                                id="filter_to_year">
                                                 <option value="">Year</option>
                                                 <option value="">2014</option>
                                                 <option value="">2013</option>
