--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -244,7 +244,10 @@
                                             Topics
                                         </label>
                                         <!-- <input type="text" name="filter_tags" value=""> -->
-                                        <select name="filter_tags" multiple>
+                                        <select
+                                            id="filter_tags"
+                                            name="filter_tags"
+                                            multiple>
                                             <option value="tag1">Tag 1</option>
                                             <option value="tag2">Tag 2</option>
                                             <option value="tag3">Tag 3</option>
@@ -258,7 +261,10 @@
                                             Author
                                         </label>
                                         <!-- <input type="text" name="filter_author" value=""> -->
-                                        <select name="filter_author" multiple>
+                                        <select
+                                            id="filter_author"
+                                            name="filter_author"
+                                            multiple>
                                             <option value="author1">Author 1</option>
                                             <option value="author2">Author 2</option>
                                             <option value="author3">Author 3</option>
@@ -279,8 +285,8 @@
                                             </label>
                                             <select
                                                 class="form-input-month"
-                                                name="filter_from_month"
-                                                id="filter_from_month">
+                                                id="filter_from_month"
+                                                name="filter_from_month">
                                                 <option value="">Month</option>
                                                 <option value="">January</option>
                                                 <option value="">February</option>
@@ -300,8 +306,8 @@
                                             </label>
                                             <select
                                                 class="form-input_year"
-                                                name="filter_from_year"
-                                                id="filter_from_year">
+                                                id="filter_from_year"
+                                                name="filter_from_year">
                                                 <option value="">Year</option>
                                                 <option value="">2014</option>
                                                 <option value="">2013</option>
@@ -315,8 +321,8 @@
                                             </label>
                                             <select
                                                 class="form-input-month"
-                                                name="filter_to_month"
-                                                id="filter_to_month">
+                                                id="filter_to_month"
+                                                name="filter_to_month">
                                                 <option value="">Month</option>
                                                 <option value="">January</option>
                                                 <option value="">February</option>
@@ -336,8 +342,8 @@
                                             </label>
                                             <select
                                                 class="form-input_year"
-                                                name="filter_to_year"
-                                                id="filter_to_year">
+                                                id="filter_to_year"
+                                                name="filter_to_year">
                                                 <option value="">Year</option>
                                                 <option value="">2014</option>
                                                 <option value="">2013</option>
