Updates filter form labels.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -472,6 +472,7 @@
                     <form class="pagination_form">
                         <label class="pagination_label" for="pagination_current-page">
                             Page
+                            <span class="u-visually-hidden">number</span>
                         </label>
                         <input class="pagination_current-page"
                                id="pagination_current-page"
@@ -480,7 +481,7 @@
                                min="1"
                                max="10"
                                value="2" />
-                        <label class="pagination_label" for="pagination_current-page">
+                        <label class="pagination_label">
                             of 10
                         </label>
                         <button class="btn btn-link pagination_submit" id="pagination_submit" type="submit">
