--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -472,7 +472,9 @@
                     <form class="pagination_form">
                         <label class="pagination_label" for="pagination_current-page">
                             Page
-                            <span class="u-visually-hidden">number</span>
+                            <span class="u-visually-hidden">
+                                number out of 10 total pages
+                            </span>
                         </label>
                         <input class="pagination_current-page"
                                id="pagination_current-page"
@@ -481,9 +483,11 @@
                                min="1"
                                max="10"
                                value="2" />
-                        <label class="pagination_label">
-                            of 10
-                        </label>
+                        <span class="pagination_label">
+                            <span aria-hidden="true">
+                                of 10
+                            </span>
+                        </span>
                         <button class="btn btn-link pagination_submit" id="pagination_submit" type="submit">
                             Go
                         </button>
