--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -245,9 +245,11 @@
                                         </label>
                                         <!-- <input type="text" name="filter_tags" value=""> -->
                                         <select
+                                            class="chosen-select"
                                             id="filter_tags"
                                             name="filter_tags"
-                                            multiple>
+                                            multiple
+                                            data-placeholder="Select an option">
                                             <option value="tag1">Tag 1</option>
                                             <option value="tag2">Tag 2</option>
                                             <option value="tag3">Tag 3</option>
@@ -262,9 +264,11 @@
                                         </label>
                                         <!-- <input type="text" name="filter_author" value=""> -->
                                         <select
+                                            class="chosen-select"
                                             id="filter_author"
                                             name="filter_author"
-                                            multiple>
+                                            multiple
+                                            data-placeholder="Select an option">
                                             <option value="author1">Author 1</option>
                                             <option value="author2">Author 2</option>
                                             <option value="author3">Author 3</option>
@@ -559,6 +563,12 @@
 -->
 
 <script src="../static/js/main.min.js"></script>
+<script>
+    $(".chosen-select").chosen({
+        disable_search_threshold: 10,
+        no_results_text: "Oops, no matching tags."
+    });
+</script>
 
 </body>
 
