--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -244,10 +244,9 @@
                                             Topics
                                         </label>
                                         <!-- <input type="text" name="filter_tags" value=""> -->
-                                        <select
-                                            id="filter_tags"
-                                            name="filter_tags"
-                                            multiple>
+                                        <select id="filter_tags"
+                                                name="filter_tags"
+                                                multiple>
                                             <option value="tag1">Tag 1</option>
                                             <option value="tag2">Tag 2</option>
                                             <option value="tag3">Tag 3</option>
@@ -261,10 +260,9 @@
                                             Author
                                         </label>
                                         <!-- <input type="text" name="filter_author" value=""> -->
-                                        <select
-                                            id="filter_author"
-                                            name="filter_author"
-                                            multiple>
+                                        <select id="filter_author"
+                                                name="filter_author"
+                                                multiple>
                                             <option value="author1">Author 1</option>
                                             <option value="author2">Author 2</option>
                                             <option value="author3">Author 3</option>
@@ -283,10 +281,9 @@
                                             <label class="u-visually-hidden" for="filter_from_month">
                                                 From month
                                             </label>
-                                            <select
-                                                class="form-input-month"
-                                                id="filter_from_month"
-                                                name="filter_from_month">
+                                            <select class="form-input-month"
+                                                    id="filter_from_month"
+                                                    name="filter_from_month">
                                                 <option value="">Month</option>
                                                 <option value="">January</option>
                                                 <option value="">February</option>
@@ -304,10 +301,9 @@
                                             <label class="u-visually-hidden" for="filter_from_year">
                                                 From year
                                             </label>
-                                            <select
-                                                class="form-input_year"
-                                                id="filter_from_year"
-                                                name="filter_from_year">
+                                            <select class="form-input_year"
+                                                    id="filter_from_year"
+                                                    name="filter_from_year">
                                                 <option value="">Year</option>
                                                 <option value="">2014</option>
                                                 <option value="">2013</option>
@@ -319,10 +315,9 @@
                                             <label class="u-visually-hidden" for="filter_to_month">
                                                 To month
                                             </label>
-                                            <select
-                                                class="form-input-month"
-                                                id="filter_to_month"
-                                                name="filter_to_month">
+                                            <select class="form-input-month"
+                                                    id="filter_to_month"
+                                                    name="filter_to_month">
                                                 <option value="">Month</option>
                                                 <option value="">January</option>
                                                 <option value="">February</option>
@@ -340,10 +335,9 @@
                                             <label class="u-visually-hidden" for="filter_to_year">
                                                 To yeat
                                             </label>
-                                            <select
-                                                class="form-input_year"
-                                                id="filter_to_year"
-                                                name="filter_to_year">
+                                            <select class="form-input_year"
+                                                    id="filter_to_year"
+                                                    name="filter_to_year">
                                                 <option value="">Year</option>
                                                 <option value="">2014</option>
                                                 <option value="">2013</option>
@@ -463,11 +457,11 @@
                 </article>
 
                 <nav class="post-pagination pagination" role="navigation" aria-label="Pagination">
-                    <a class="btn btn-secondary pagination_prev" href="#pagination_content">
+                    <a class="btn pagination_prev" href="#pagination_content">
                         <span class="btn-icon-left cf-icon cf-icon-left"></span>
                         Newer
                     </a>
-                    <a class="btn btn-secondary pagination_next" href="#pagination_content">
+                    <a class="btn pagination_next" href="#pagination_content">
                         Older
                         <span class="btn-icon-right cf-icon cf-icon-right"></span>
                     </a>
