--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -147,7 +147,7 @@
         <div class="wrapper content_wrapper">
             <section class="content_main">
 
-                <div class="expandable">
+                <div class="expandable expandable__expanded">
                     <div class="expandable_header expandable_header__spaced">
                         <div class="expandable_header-right expandable_header-right__float-on-medium">
                             <a class="expandable_target btn btn-secondary"
