--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -247,7 +247,8 @@
                                         <select class="chosen-select"
                                                 id="filter_tags"
                                                 name="filter_tags"
-                                                multiple>
+                                                multiple
+                                                data-placeholder="Select some options">
                                             <option value="tag1">Tag 1</option>
                                             <option value="tag2">Tag 2</option>
                                             <option value="tag3">Tag 3</option>
@@ -264,7 +265,8 @@
                                         <select class="chosen-select"
                                                 id="filter_author"
                                                 name="filter_author"
-                                                multiple>
+                                                multiple
+                                                data-placeholder="Select some options">
                                             <option value="author1">Author 1</option>
                                             <option value="author2">Author 2</option>
                                             <option value="author3">Author 3</option>
