--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -152,12 +152,12 @@
                         <div class="expandable_header-right expandable_header-right__float-on-medium">
                             <a class="expandable_target btn btn-secondary"
                                href="#post-filters-form">
-                                Filter posts&nbsp;&nbsp;
+                                Filter posts
                                 <span class="expandable_cue-open">
-                                    <span class="cf-icon cf-icon-down"></span>
+                                    <span class="btn-icon-right cf-icon cf-icon-down"></span>
                                 </span>
                                 <span class="expandable_cue-close">
-                                    <span class="cf-icon cf-icon-up"></span>
+                                    <span class="btn-icon-right cf-icon cf-icon-up"></span>
                                 </span>
                             </a>
                         </div>
