Update staic post dek examples.

--- a/blog_static/post.html
+++ b/blog_static/post.html
@@ -127,13 +127,15 @@
                         <h1 class="post_header">
                             A consumer-centered supervision program
                         </h1>
-                        <p class="post_dek">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Quis architecto commodi cupiditate excepturi
-                            consequatur sequi quia consectetur est ea laborum
-                            saepe earum quidem a necessitatibus modi magni error
-                            ab suscipit.
-                        </p>
+                        <div class="post_dek">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing
+                                elit. Quis architecto commodi cupiditate excepturi
+                                consequatur sequi quia consectetur est ea laborum
+                                saepe earum quidem a necessitatibus modi magni error
+                                ab suscipit.
+                            </p>
+                        </div>
                         <div class="post_meta">
                             <span class="post_byline">
                                 By <a href="#">Firstname&nbsp;Lastname</a> &ndash;
