Fixes filtered by alignment.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -161,7 +161,7 @@
                                 </span>
                             </a>
                         </div>
-                        <dl class="expandable_header-left filtered-by filtered-by__show-on-medium filtered-by__align-with-btn list list__horizontal">
+                        <dl class="filtered-by filtered-by__show-on-medium filtered-by__align-with-btn list list__horizontal">
                             <dt class="list_item">
                                 <span class="filtered-by_header">Filtered by</span>
                             </dt>
