--- a/blog_static/post.html
+++ b/blog_static/post.html
@@ -494,7 +494,34 @@
                 </article>
 
                 <section class="comments">
-                    <div class="demo-placeholder">comments placeholder</div>
+
+                    <div id="disqus_thread"></div>
+                    <script type="text/javascript">
+                        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+                        // required: replace example with your forum shortname
+                        var disqus_shortname = 'cfpbflapjackdemo';
+
+                        /* * * DON'T EDIT BELOW THIS LINE * * */
+                        (function() {
+                            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                        })();
+                    </script>
+                    <noscript>
+                        Please enable JavaScript to view the
+                        <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+                    </noscript>
+                    <a href="http://disqus.com" class="dsq-brlink">
+                        comments powered by <span class="logo-disqus">Disqus</span>
+                    </a>
+
+                    <p class="comment-policy">
+                        CF.gov Refresh follows the
+                        <a href="http://www.consumerfinance.gov/comment-policy">
+                            consumerfinance.gov comment policy</a>.
+                    </p>
+
                 </section>
 
             </section><!-- END .content_main -->
