--- a/blog_static/post.html
+++ b/blog_static/post.html
@@ -516,7 +516,7 @@
                         comments powered by <span class="logo-disqus">Disqus</span>
                     </a>
 
-                    <p class="comment_policy">
+                    <p class="comments_policy">
                         CF.gov Refresh follows the
                         <a href="http://www.consumerfinance.gov/comment-policy">
                             consumerfinance.gov comment policy</a>.
