--- a/blog_static/post.html
+++ b/blog_static/post.html
@@ -522,7 +522,7 @@
                             consumerfinance.gov comment policy</a>.
                     </p>
 
-                </section>
+                </section><!-- END .comments -->
 
             </section><!-- END .content_main -->
 
