--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -471,7 +471,7 @@
                         Older
                         <span class="btn-icon-right cf-icon cf-icon-right"></span>
                     </a>
-                    <form class="pagination_form" action="landing.html#pagination_content">
+                    <form class="pagination_form" action="#pagination_content">
                         <label class="pagination_label" for="pagination_current-page">
                             Page
                             <span class="u-visually-hidden">
