Adds category icons.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -370,7 +370,7 @@
                             Nov 4, 2013
                         </span>
                         <a href="#" class="category-slug meta-header_left">
-                            <span class="cf-icon cf-icon-help"></span>
+                            <span class="cf-icon cf-icon-bullhorn"></span>
                             <span class="u-visually-hidden">Category:</span>
                             Announcements &amp; updates
                         </a>
@@ -388,7 +388,7 @@
                             Nov 4, 2013
                         </span>
                         <a href="#" class="category-slug meta-header_left">
-                            <span class="cf-icon cf-icon-help"></span>
+                            <span class="cf-icon cf-icon-information"></span>
                             <span class="u-visually-hidden">Category:</span>
                             Consumer information
                         </a>
@@ -419,7 +419,7 @@
                             Nov 4, 2013
                         </span>
                         <a href="#" class="category-slug meta-header_left">
-                            <span class="cf-icon cf-icon-help"></span>
+                            <span class="cf-icon cf-icon-dialogue"></span>
                             <span class="u-visually-hidden">Category:</span>
                             Engagement
                         </a>
@@ -437,7 +437,7 @@
                             Nov 4, 2013
                         </span>
                         <a href="#" class="category-slug meta-header_left">
-                            <span class="cf-icon cf-icon-help"></span>
+                            <span class="cf-icon cf-icon-lightbulb"></span>
                             <span class="u-visually-hidden">Category:</span>
                             Innovation &amp; data
                         </a>
