--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -116,9 +116,9 @@
                     <div class="hero_card-bg">
                         <div class="hero_card-padding">
                             <a href="#" class="category-slug">
-                                <span class="cf-icon cf-icon-help"></span>
+                                <span class="category-slug_icon cf-icon cf-icon-bullhorn"></span>
                                 <span class="u-visually-hidden">Category:</span>
-                                Announcements &amp; updates
+                                Announcements & updates
                             </a>
                             <a class="summary" href="#">
                                 <h1 class="summary_header">Preventing illegal discrimination in auto lending</h1>
@@ -370,9 +370,9 @@
                             Nov 4, 2013
                         </span>
                         <a href="#" class="category-slug meta-header_left">
-                            <span class="cf-icon cf-icon-bullhorn"></span>
+                            <span class="category-slug_icon cf-icon cf-icon-bullhorn"></span>
                             <span class="u-visually-hidden">Category:</span>
-                            Announcements &amp; updates
+                            Announcements & updates
                         </a>
                     </div>
                     <a class="summary" href="#">
@@ -388,7 +388,7 @@
                             Nov 4, 2013
                         </span>
                         <a href="#" class="category-slug meta-header_left">
-                            <span class="cf-icon cf-icon-information"></span>
+                            <span class="category-slug_icon cf-icon cf-icon-information"></span>
                             <span class="u-visually-hidden">Category:</span>
                             Consumer information
                         </a>
@@ -419,7 +419,7 @@
                             Nov 4, 2013
                         </span>
                         <a href="#" class="category-slug meta-header_left">
-                            <span class="cf-icon cf-icon-dialogue"></span>
+                            <span class="category-slug_icon cf-icon cf-icon-dialogue"></span>
                             <span class="u-visually-hidden">Category:</span>
                             Engagement
                         </a>
@@ -437,9 +437,9 @@
                             Nov 4, 2013
                         </span>
                         <a href="#" class="category-slug meta-header_left">
-                            <span class="cf-icon cf-icon-lightbulb"></span>
+                            <span class="category-slug_icon cf-icon cf-icon-lightbulb"></span>
                             <span class="u-visually-hidden">Category:</span>
-                            Innovation &amp; data
+                            Innovation & data
                         </a>
                     </div>
                     <a class="media-object" href="#">
