--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -112,22 +112,22 @@
 
         <section class="content_hero hero" style="background-color:#337E7D;">
             <div class="hero_wrapper">
-                <div class="hero_card">
+                <a class="hero_card" href="#">
                     <div class="hero_card-bg">
                         <div class="hero_card-padding">
-                            <a href="#" class="category-slug">
+                            <span class="category-slug">
                                 <span class="category-slug_icon cf-icon cf-icon-bullhorn"></span>
                                 <span class="u-visually-hidden">Category:</span>
                                 Announcements & updates
-                            </a>
-                            <a class="summary" href="#">
+                            </span>
+                            <span class="summary">
                                 <h1 class="summary_header">Preventing illegal discrimination in auto lending</h1>
                                 <p class="summary_text">Every year, millions of American families buy a car – and it will be one of the most significant purchases they make. One key priority for us is protecting consumers from the silent pickpocket of discrimination.</p>
                                 <p class="summary_byline">By Patrice Ficklin</p>
-                            </a>
+                            </span>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="hero_img-container hero_img-container__small">
                 <div class="hero_img"
