Adds custom checkboxes to filters for testing.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -147,7 +147,7 @@
         <div class="wrapper content_wrapper">
             <section class="content_main">
 
-                <div class="expandable">
+                <div class="expandable expandable__expanded">
                     <div class="expandable_header expandable_header__spaced">
                         <div class="expandable_header-right expandable_header-right__float-on-medium">
                             <a class="expandable_target btn btn-secondary"
@@ -221,19 +221,31 @@
                                             Categories
                                         </label>
                                         <label class="form-group_item form-label">
-                                            <input type="checkbox" name="filter_category" value="announcements">
+                                            <input class="custom-input"
+                                                   type="checkbox"
+                                                   name="filter_category"
+                                                   value="announcements">
                                             Announcements &amp; updates
                                         </label>
                                         <label class="form-group_item form-label">
-                                            <input type="checkbox" name="filter_category" value="consumer">
+                                            <input class="custom-input"
+                                                   type="checkbox"
+                                                   name="filter_category"
+                                                   value="consumer">
                                             Consumer information
                                         </label>
                                         <label class="form-group_item form-label">
-                                            <input type="checkbox" name="filter_category" value="engagement">
+                                            <input class="custom-input"
+                                                   type="checkbox"
+                                                   name="filter_category"
+                                                   value="engagement">
                                             Engagement
                                         </label>
                                         <label class="form-group_item form-label">
-                                            <input type="checkbox" name="filter_category" value="innovation">
+                                            <input class="custom-input"
+                                                   type="checkbox"
+                                                   name="filter_category"
+                                                   value="innovation">
                                             Innovation &amp; data
                                         </label>
                                     </div>
