Testing ie bug.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -220,8 +220,10 @@
                                         <label class="form-label-header">
                                             Categories
                                         </label>
-                                        <label class="form-group_item form-label">
+                                        <label class="form-group_item form-label"
+                                               for="filter_category_announcements">
                                             <input class="custom-input"
+                                                   id="filter_category_announcements"
                                                    type="checkbox"
                                                    name="filter_category"
                                                    value="announcements">
