Use for and id attr to support ie7.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -231,6 +231,7 @@
                                         </label>
                                         <label class="form-group_item form-label">
                                             <input class="custom-input"
+                                                   id="filter_category_consumer"
                                                    type="checkbox"
                                                    name="filter_category"
                                                    value="consumer">
@@ -238,6 +239,7 @@
                                         </label>
                                         <label class="form-group_item form-label">
                                             <input class="custom-input"
+                                                   id="filter_category_engagement"
                                                    type="checkbox"
                                                    name="filter_category"
                                                    value="engagement">
@@ -245,6 +247,7 @@
                                         </label>
                                         <label class="form-group_item form-label">
                                             <input class="custom-input"
+                                                   id="filter_category_innovation"
                                                    type="checkbox"
                                                    name="filter_category"
                                                    value="innovation">
