Add for and id attrs to static landing.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -229,7 +229,8 @@
                                                    value="announcements">
                                             Announcements &amp; updates
                                         </label>
-                                        <label class="form-group_item form-label">
+                                        <label class="form-group_item form-label"
+                                               for="filter_category_consumer">
                                             <input class="custom-input"
                                                    id="filter_category_consumer"
                                                    type="checkbox"
@@ -237,7 +238,8 @@
                                                    value="consumer">
                                             Consumer information
                                         </label>
-                                        <label class="form-group_item form-label">
+                                        <label class="form-group_item form-label"
+                                               for="filter_category_engagement">
                                             <input class="custom-input"
                                                    id="filter_category_engagement"
                                                    type="checkbox"
@@ -245,7 +247,8 @@
                                                    value="engagement">
                                             Engagement
                                         </label>
-                                        <label class="form-group_item form-label">
+                                        <label class="form-group_item form-label"
+                                               for="filter_category_innovation">
                                             <input class="custom-input"
                                                    id="filter_category_innovation"
                                                    type="checkbox"
