Updates clear filers script.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -256,6 +256,10 @@
                                                    value="innovation">
                                             Innovation &amp; data
                                         </label>
+                                        <input class="form-group_item"
+                                               type="checkbox"
+                                               name="filter_category"
+                                               value="innovation">
                                     </div>
                                 </div>
                                 <div class="form-l_col form-l_col-1-3">
