Test custom select on blog landing.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -319,69 +319,77 @@
                                             <label class="u-visually-hidden" for="filter_from_month">
                                                 From month
                                             </label>
-                                            <select class="form-input-month"
-                                                    id="filter_from_month"
-                                                    name="filter_from_month">
-                                                <option value="">Month</option>
-                                                <option value="">January</option>
-                                                <option value="">February</option>
-                                                <option value="">March</option>
-                                                <option value="">April</option>
-                                                <option value="">May</option>
-                                                <option value="">June</option>
-                                                <option value="">July</option>
-                                                <option value="">August</option>
-                                                <option value="">September</option>
-                                                <option value="">October</option>
-                                                <option value="">November</option>
-                                                <option value="">December</option>
-                                            </select>
+                                            <div class="custom-select">
+                                                <select class="form-input-month"
+                                                        id="filter_from_month"
+                                                        name="filter_from_month">
+                                                    <option value="">Month</option>
+                                                    <option value="">January</option>
+                                                    <option value="">February</option>
+                                                    <option value="">March</option>
+                                                    <option value="">April</option>
+                                                    <option value="">May</option>
+                                                    <option value="">June</option>
+                                                    <option value="">July</option>
+                                                    <option value="">August</option>
+                                                    <option value="">September</option>
+                                                    <option value="">October</option>
+                                                    <option value="">November</option>
+                                                    <option value="">December</option>
+                                                </select>
+                                            </div>
                                             <label class="u-visually-hidden" for="filter_from_year">
                                                 From year
                                             </label>
-                                            <select class="form-input_year"
-                                                    id="filter_from_year"
-                                                    name="filter_from_year">
-                                                <option value="">Year</option>
-                                                <option value="">2014</option>
-                                                <option value="">2013</option>
-                                                <option value="">2012</option>
-                                                <option value="">2011</option>
-                                            </select>
+                                            <div class="custom-select">
+                                                <select class="form-input_year"
+                                                        id="filter_from_year"
+                                                        name="filter_from_year">
+                                                    <option value="">Year</option>
+                                                    <option value="">2014</option>
+                                                    <option value="">2013</option>
+                                                    <option value="">2012</option>
+                                                    <option value="">2011</option>
+                                                </select>
+                                            </div>
                                         </div>
                                         <div class="form-group_item">
                                             <label class="u-visually-hidden" for="filter_to_month">
                                                 To month
                                             </label>
-                                            <select class="form-input-month"
-                                                    id="filter_to_month"
-                                                    name="filter_to_month">
-                                                <option value="">Month</option>
-                                                <option value="">January</option>
-                                                <option value="">February</option>
-                                                <option value="">March</option>
-                                                <option value="">April</option>
-                                                <option value="">May</option>
-                                                <option value="">June</option>
-                                                <option value="">July</option>
-                                                <option value="">August</option>
-                                                <option value="">September</option>
-                                                <option value="">October</option>
-                                                <option value="">November</option>
-                                                <option value="">December</option>
-                                            </select>
+                                            <div class="custom-select">
+                                                <select class="form-input-month"
+                                                        id="filter_to_month"
+                                                        name="filter_to_month">
+                                                    <option value="">Month</option>
+                                                    <option value="">January</option>
+                                                    <option value="">February</option>
+                                                    <option value="">March</option>
+                                                    <option value="">April</option>
+                                                    <option value="">May</option>
+                                                    <option value="">June</option>
+                                                    <option value="">July</option>
+                                                    <option value="">August</option>
+                                                    <option value="">September</option>
+                                                    <option value="">October</option>
+                                                    <option value="">November</option>
+                                                    <option value="">December</option>
+                                                </select>
+                                            </div>
                                             <label class="u-visually-hidden" for="filter_to_year">
                                                 To yeat
                                             </label>
-                                            <select class="form-input_year"
-                                                    id="filter_to_year"
-                                                    name="filter_to_year">
-                                                <option value="">Year</option>
-                                                <option value="">2014</option>
-                                                <option value="">2013</option>
-                                                <option value="">2012</option>
-                                                <option value="">2011</option>
-                                            </select>
+                                            <div class="custom-select">
+                                                <select class="form-input_year"
+                                                        id="filter_to_year"
+                                                        name="filter_to_year">
+                                                    <option value="">Year</option>
+                                                    <option value="">2014</option>
+                                                    <option value="">2013</option>
+                                                    <option value="">2012</option>
+                                                    <option value="">2011</option>
+                                                </select>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
